--- a/index.html
+++ b/index.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Password Generator</h1>
-      </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Password Generator</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Password Generator</h1>
+    </header>
+
+    <div class="card">
+      <div class="card-header">
+        <h2>Generate a Password</h2>
+      </div>
+      <div class="results container">
+        <span id="results"></span>
+      </div>
+
+      <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password">
+      </textarea>
+
+      <div class="settings">
+        <div class="setting">
+          <label for="length">Password length (min. of 8 characters)</label>
+          <input type="number" id="length" min="8" max="135" value="20">
         </div>
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
+        <div class="setting">
+          <label for="uppercase">Include Uppercase letters</label>
+          <input type="checkbox" id="uppercase" checked>
         </div>
+
+        <div class="setting">
+          <label for="lowercase">Include lowercase letters</label>
+          <input type="checkbox" id="lowercase" checked>
+        </div>
+
+        <div class="setting">
+          <label for="Numbers">Include Numbers</label>
+          <input type="checkbox" id="numbers" checked>
+        </div>
+
+        <div class="setting">
+          <label for="Symbols">Include Special Characters</label>
+          <input type="checkbox" id="symbols" checked>
+        </div>
+
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
